--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-final-modal": "^4.4.5",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
